// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment View should render correctly 1`] = `
<div
  className=""
>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(BodyCopy)
        className="payment__separator"
        color="text.primary"
        component="h4"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="extrabold"
        letterSpacing="normal"
        lineHeight="normal"
        textAlign="left"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    />
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <GiftCardList />
      <Styled(deleteGiftModal)
        data={
          Object {
            "buttons": Object {
              "cancel": undefined,
              "confirm": undefined,
            },
            "heading": undefined,
          }
        }
        labels={
          Object {
            "giftCard": "Payment",
          }
        }
      />
    </Styled(Col)>
  </Styled(Row)>
</div>
`;

exports[`Payment View should render correctly with error 1`] = `
<div
  className=""
>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(BodyCopy)
        className="payment__separator"
        color="text.primary"
        component="h4"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="extrabold"
        letterSpacing="normal"
        lineHeight="normal"
        textAlign="left"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(Notification)
        colSize={
          Object {
            "large": 12,
            "medium": 8,
            "small": 6,
          }
        }
        status="error"
      />
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <GiftCardList />
      <Styled(deleteGiftModal)
        data={
          Object {
            "buttons": Object {
              "cancel": undefined,
              "confirm": undefined,
            },
            "heading": undefined,
          }
        }
        labels={
          Object {
            "giftCard": "Payment",
          }
        }
      />
    </Styled(Col)>
  </Styled(Row)>
</div>
`;

exports[`Payment View should render correctly with success 1`] = `
<div
  className=""
>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(BodyCopy)
        className="payment__separator"
        color="text.primary"
        component="h4"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="extrabold"
        letterSpacing="normal"
        lineHeight="normal"
        textAlign="left"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(Notification)
        colSize={
          Object {
            "large": 12,
            "medium": 8,
            "small": 6,
          }
        }
        status="success"
      />
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <GiftCardList />
      <Styled(deleteGiftModal)
        data={
          Object {
            "buttons": Object {
              "cancel": undefined,
              "confirm": undefined,
            },
            "heading": undefined,
          }
        }
        labels={
          Object {
            "giftCard": "Payment",
          }
        }
      />
    </Styled(Col)>
  </Styled(Row)>
</div>
`;
